package ucd.comp3013j.ems.model;

public enum Role {
    ADMINISTRATOR, ORGANISER, CUSTOMER
}
