package com.eventmanagementsystem.repository;

public interface VenueRepository {
}
